youtube: Temporarily relax requirements on <feed/title> element

The YouTube comments feed is not a valid Atom feed, as it’s recently (somehow)
lost its <title> element. So we temporarily relax our requirements for feeds
to follow any kind of standards or even the Google-provided documentation.

Filed as: https://code.google.com/p/gdata-issues/issues/detail?id=2908

Helps: https://bugzilla.gnome.org/show_bug.cgi?id=679072